@startuml

title __SECURITY's Class Diagram__\n

  namespace  {
    namespace om.unidates.Unidates.UniDates {
      namespace Security {
        class com.unidates.Unidates.UniDates.Security.ConfigureUIServiceInitListener {
            + serviceInit()
            - beforeEnter()
        }
      }
    }
  }
  

  namespace  {
    namespace om.unidates.Unidates.UniDates {
      namespace Security {
        class com.unidates.Unidates.UniDates.Security.CustomAuthenticationFailureHandler {
            + onAuthenticationFailure()
        }
      }
    }
  }
  

  namespace  {
    namespace om.unidates.Unidates.UniDates {
      namespace Security {
        class com.unidates.Unidates.UniDates.Security.CustomRequestCache {
            + saveRequest()
        }
      }
    }
  }
  

  namespace  {
    namespace om.unidates.Unidates.UniDates {
      namespace Security {
        class com.unidates.Unidates.UniDates.Security.SecurityConfiguration {
            {static} - LOGIN_FAILURE_URL : String
            {static} - LOGIN_PROCESSING_URL : String
            {static} - LOGIN_URL : String
            {static} - LOGOUT_SUCCESS_URL : String
            + authenticationFailureHandler()
            + configure()
            + encoder()
            + sessionRegistry()
            # configure()
            # configure()
        }
      }
    }
  }
  

  namespace  {
    namespace om.unidates.Unidates.UniDates {
      namespace Security {
        class com.unidates.Unidates.UniDates.Security.SecurityUtils {
            {static} - userManager : UserManager
            + SecurityUtils()
            {static} + forceLogout()
            {static} + getLoggedIn()
            {static} + isUserLoggedIn()
            {static} ~ isFrameworkInternalRequest()
        }
      }
    }
  }
  

  namespace  {
    namespace om.unidates.Unidates.UniDates {
      namespace Security {
        class com.unidates.Unidates.UniDates.Security.UserDetailsService {
            + loadUserByUsername()
        }
      }
    }
  }
  

  com.unidates.Unidates.UniDates.Security.ConfigureUIServiceInitListener .up.|> com.vaadin.flow.server.VaadinServiceInitListener
  com.unidates.Unidates.UniDates.Security.CustomAuthenticationFailureHandler -up-|> org.springframework.security.web.authentication.SimpleUrlAuthenticationFailureHandler
  com.unidates.Unidates.UniDates.Security.CustomRequestCache -up-|> org.springframework.security.web.savedrequest.HttpSessionRequestCache
  com.unidates.Unidates.UniDates.Security.SecurityConfiguration -up-|> org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter
  com.unidates.Unidates.UniDates.Security.SecurityConfiguration o-- com.unidates.Unidates.UniDates.Security.UserDetailsService : userDetailsService
  com.unidates.Unidates.UniDates.Security.UserDetailsService .up.|> org.springframework.security.core.userdetails.UserDetailsService
  com.unidates.Unidates.UniDates.Security.UserDetailsService o-- com.unidates.Unidates.UniDates.Repository.UtenteRepository : utenteRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
